[package]
name = "abst-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.0", features = ["v4"] }
serde = { version = "1.0.137", features = ["derive"] }
async-trait = "0.1.56"
tokio = { version = "1.19.0", features = ["net", "io-util"] ,optional = true }
bytes = "1.1.0"
byteorder = "1.4.3"
themis = "0.14.0"
rand = "0.8.5"
log = "0.4.17"
rmp = { git = "https://github.com/abst-lib/msgpack-rust.git", branch = "tokio_async", features = ["tokio"] }
packet={path = "packets/packet"}
