[package]
name = "packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet_derive = { path = "../packet_derive", optional = true }
rmp= "0.8.11"
thiserror = "1.0.31"
[dev-dependencies]
packet_derive = { path = "../packet_derive" }
