[package]
name = "packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet_derive = { path = "../packet_derive" }
rmp = { git = "https://github.com/abst-lib/msgpack-rust.git", branch = "tokio_async", features = ["tokio"] }
thiserror = "1.0.31"
uuid = "1.1.1"
bytes="1.1.0"
[dev-dependencies]
packet_derive = { path = "../packet_derive" }
