[package]
name = "ref-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
[[bin]]
name = "server"
[dependencies]
abst-rs = { path = "../../" }
iced = "0.4.2"
tokio = { version = "1.19.1", features = ["full"] }
